# 2023-advent-of-code

./: Cargo.toml
src/: lib.rs
src/d1/: first.rs  second.rs
src/d2/: data.rs  first.rs  second.rs
src/d3/: data.rs  first.rs  second.rs
src/d4/: data.rs  first.rs  second.rs
